force-app/main/default/objects/Account/fields/CEO_Phone__c.field-meta.xml
<CustomField>
    <fullName>CEO_Phone__c</fullName>
    <label>CEO Phone</label>
    <type>Phone</type>
</CustomField>