force-app/main/default/objects/Account/fields/New_Logo__c.field-meta.xml
<CustomField>
    <fullName>New_Logo__c</fullName>
    <label>New Logo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>